subida inciso 3 hecho

--- a/Errores.html
+++ b/Errores.html
@@ -19,7 +19,7 @@
                         <table  border=1 bordercolor="white"  style="margin: 0 auto;bgcolor="#FFFFFF">
                         <tr>
                          <td><font color = "white">id</td><td><font color = "white">Fila</td><td><font color = "white">Columna</td><td><font color = "white">Caracter</td><td><font color = "white">Descripcion</td>
-                        </tr><tr><td><font color = "white">1</td><td><font color = "white">10</td><td><font color = "white">2</td><td><font color = "white">d3</td><td><font color = "white">ID es el mismo que un articulo previamente ingresado</td></tr> </table> </div> <div class="copyright">&copy;2020- <strong>Edwin estuardo reyes reyes</strong></div>
+                        </tr><tr><td><font color = "white">1</td><td><font color = "white">1</td><td><font color = "white">28</td><td><font color = "white"> </td><td><font color = "white">Caracter Desconocido</td></tr><tr><td><font color = "white">2</td><td><font color = "white">1</td><td><font color = "white">40</td><td><font color = "white"> </td><td><font color = "white">Caracter Desconocido</td></tr> </table> </div> <div class="copyright">&copy;2020- <strong>Edwin estuardo reyes reyes</strong></div>
                         </div>
                         </body>
                         </html>
